# libusb-wrapper

./: CMakeLists.txt  README.md  project.cmake
include/libusb-wrapper/: UsbConfigDescriptorWrapper.h  UsbContextWrapper.h  UsbDeviceListWrapper.h  UsbDeviceWrapper.cpp  UsbDeviceWrapper.h
test/: main.cpp
test/libusb-wrapper/: test_libusb.cpp  test_libusb.h
test/libusb-wrapper/test/: test_libusb.cpp  test_libusb.h
